kubernetes/app/plane-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: taskboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          # CI pipeline replaces this tag with the ECR image URL + git SHA after build+push
          image: 207137402976.dkr.ecr.eu-west-2.amazonaws.com/plane-app-eks/plane-backend:06fd47a3ea330908a18ff3ba1766e21312388caf
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: taskboard
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
