kubernetes/app/plane-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: taskboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # CI pipeline replaces this tag with the ECR image URL + git SHA after build+push
          image: 207137402976.dkr.ecr.eu-west-2.amazonaws.com/plane-app-eks/plane-frontend:9c06c0f68581a5bd4c304e95ab77ea1ed8a2b2f0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: taskboard
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
